# advent-of-code-2020

./: .build.yml  README.md  default.nix
day1/: day1.rkt  default.nix
day1/day1-hs/: CHANGELOG.md  Main.hs  day1-hs.cabal  default.nix
day2/: password.py  password2.py
day2/day2-py/: default.nix  setup.py
day2/day2-py/password/: __main__.py  problem1.py  problem2.py
day3/day3-hs/: CHANGELOG.md  Main.hs  day3-hs.cabal  default.nix
day4/day4-hs/: CHANGELOG.md.save0  Main.hs  day4-hs.cabal  default.nix
day5/day5-hs/: CHANGELOG.md  Main.hs  day5-hs.cabal  default.nix
day6/day6-hs/: CHANGELOG.md  Main.hs  day6-hs.cabal  default.nix
nix/: sources.json
