cabal-version:      >=1.10
name:               day1-hs
version:            0.1.0.0
license-file:       LICENSE
maintainer:         djanatyn@gmail.com
author:             Jonathan Strickland
build-type:         Simple
extra-source-files: CHANGELOG.md

executable day1-hs
    main-is:          Main.hs
    default-language: Haskell2010
    build-depends:    base >=4.14
